Fixed bug where filter budget slider overlaps radio, thus making it unselectable.

--- a/src/main/resources/com/basilio/flightsearch/components/Slider.css
+++ b/src/main/resources/com/basilio/flightsearch/components/Slider.css
@@ -39,6 +39,7 @@ div.slider-track-custom {
 }
 
 div.slider-value-custom {
+    width: 170px;
     position: relative;
     top: 6px;
     left: 70px;
